--- a/start.html
+++ b/start.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my third repo</title>
 </head>
 <body>
     <h1>My Start File is not index.html file</h1>
     <img src="pic.jpg" alt="">
+    <div>
+        <h3>my added blog</h3>
+        <h5>writing blog</h5>
+        <p>new git branch created</p>
+    </div>
+    
 </body>
 </html>
